--- a/src/app/modules/asimov-dashboard/pages/dashboard/dashboard.component.html
+++ b/src/app/modules/asimov-dashboard/pages/dashboard/dashboard.component.html
@@ -1,24 +1,19 @@
 <div class="dashboard-container">
-    <h1>Robot Tournament Dashboard</h1>
+    <h1>{{ 'ASIMOVCUP.LEADERBOARD.TITLE' | translate }}</h1>
 
     <div class="dashboard-content">
         <div class="leaderboard-section">
-            <h2>Leaderboard</h2>
             <div class="leaderboard-container">
                 <table class="leaderboard-table">
                     <thead>
                     <tr>
                         <th class="rank-column">#</th>
-                        <th class="name-column">Name</th>
-                        <th class="score-column">Score</th>
+                        <th class="name-column">{{ 'ASIMOVCUP.LEADERBOARD.NAMEHEADER' | translate }}</th>
+                        <th class="score-column">{{ 'ASIMOVCUP.LEADERBOARD.SCOREHEADER' | translate }}</th>
                     </tr>
                     </thead>
                     <tbody>
-                    <tr *ngFor="let player of (leaderboard$|async); let i = index"
-                        [class.top-three]="i < 3"
-                        [class.gold]="i === 0"
-                        [class.silver]="i === 1"
-                        [class.bronze]="i === 2">
+                    <tr *ngFor="let player of (leaderboard$|async); let i = index">
                         <td class="rank-column">
                             <ng-container [ngSwitch]="i">
                                 <span *ngSwitchCase="0" class="medal gold-medal">🥇</span>
