--- a/src/app/modules/asimov-dashboard/pages/dashboard/dashboard.component.css
+++ b/src/app/modules/asimov-dashboard/pages/dashboard/dashboard.component.css
@@ -106,6 +106,11 @@ thead th:last-child {
     margin-left: 3px;
 }
 
+.leaderboard-table tr {
+    transition: transform 300ms ease;
+    will-change: transform;
+}
+
 /* Additional responsive adjustments */
 @media (max-width: 1200px) {
     .dashboard-content {
