feat: prediction status in frontend

--- a/src/app/modules/asimov-admin/pages/encounters/encounters.component.html
+++ b/src/app/modules/asimov-admin/pages/encounters/encounters.component.html
@@ -1,5 +1,12 @@
 <div class="encounters-admin">
-  <mat-card class="category-selection-card">
+    <mat-card class="score-status-selection-card">
+        <mat-card-header class="mb-4">
+            <mat-card-title>Estado de las predicciones: <span>{{ (status$ | async) ? "Abiertas" : "Cerradas" }}</span></mat-card-title>
+            <button mat-raised-button class="ml-3" (click)="toggleStatus()">{{ (status$ | async) ? "Cerrar" : "Abrir" }}</button>
+        </mat-card-header>
+    </mat-card>
+
+  <mat-card class="category-selection-card mt-2">
     <mat-card-header>
       <mat-card-title>Gestión de Enfrentamientos - Asimov Cup</mat-card-title>
     </mat-card-header>
@@ -11,7 +18,7 @@
             <h3>Enfrentamientos para {{ category.name }}</h3>
 
             <!-- Formulario para agregar enfrentamientos iniciales -->
-            <mat-card class="encounter-form-card">
+            <mat-card class="encounter-form-card" *ngIf="(status$ | async) === false">
               <mat-card-header>
                 <mat-card-title class="mb-2">Agregar Enfrentamiento Inicial</mat-card-title>
               </mat-card-header>
@@ -88,7 +95,7 @@
                         <mat-cell *matCellDef="let encounter" class="table-cell text-center">
                           <button mat-raised-button
                                   [color]="encounter.winner === getRobotById(encounter.robot1)?.id ? 'accent' : 'primary'"
-                                  [disabled]="encounter.winner"
+                                  [disabled]="encounter.winner || (status$ | async) === true"
                                   (click)="selectWinner(encounter, getRobotById(encounter.robot1))"
                                   class="robot-button">
                             <i class="fas fa-robot"></i>
@@ -111,7 +118,7 @@
                         <mat-cell *matCellDef="let encounter" class="table-cell text-center">
                           <button mat-raised-button
                                   [color]="encounter.winner === getRobotById(encounter.robot2)?.id ? 'accent' : 'primary'"
-                                  [disabled]="encounter.winner"
+                                  [disabled]="encounter.winner || (status$ | async) === true"
                                   (click)="selectWinner(encounter, getRobotById(encounter.robot2))"
                                   class="robot-button">
                             <i class="fas fa-robot"></i>
@@ -150,7 +157,7 @@
                                     (click)="deleteEncounter(encounter)"
                                     matTooltip="Eliminar enfrentamiento"
                                     class="action-btn"
-                                    *ngIf="encounter.level === 0">
+                                    *ngIf="encounter.level === 0 && (status$ | async) === false">
                               <i class="fas fa-trash"></i>
                             </button>
                           </div>
